fix slider overflow

--- a/scss/footer.scss
+++ b/scss/footer.scss
@@ -32,7 +32,7 @@
       align-items: center;
       margin-bottom: 30px;
 
-      @media (max-width: 768px) {
+      @media (max-width: 1024px) {
         flex-direction: column;
         align-items: flex-start;
       }
@@ -45,7 +45,7 @@
     color: #ffffff;
     font-size: 30px;
 
-    @media (max-width: 768px) {
+    @media (max-width: 1024px) {
       font-size: 20px;
       max-width: 100%;
     }
@@ -62,7 +62,7 @@
     align-items: center;
     justify-content: space-between;
 
-    @media (max-width: 768px) {
+    @media (max-width: 1024px) {
       font-size: 20px;
       margin-top: 5px;
       max-width: 100%;
@@ -82,41 +82,6 @@
 
     span {
       display: block;
-    }
-  }
-
-  &__social {
-    flex-basis: 40%;
-    width: 100%;
-
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    padding: 0;
-    justify-content: flex-end;
-
-    @media (max-width: 1024px) {
-      flex-basis: 100%;
-      justify-content: center;
-    }
-
-    .social__link {
-      a {
-        display: block;
-      }
-
-      &:not(:last-child) {
-        margin-right: 30px;
-      }
-    }
-
-    img {
-      max-width: 60px;
-      width: 100%;
-
-      @media (max-width: 768px) {
-        max-width: 40px;
-      }
     }
   }
 
