--- a/scss/style.scss
+++ b/scss/style.scss
@@ -44,7 +44,7 @@ img {
   };
 }
 
-html, body {
+body {
   height: 100%;
 }
 
